2003-09-08  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.2.2.

	* Added a Cygwin section to the manual.

	* Added GETENV_SAFE testing for Cygwin environments.

	* Worked a bit more on the function pnt checking code after some
	more feedback from Richard Colley.

2003-09-06  Gray Watson  <gray@outside.256.com>

	* Improved the pnt checking code to properly check free space
	below and above an allocation.  Added regression tests for this.

2003-09-05  Gray Watson  <gray@outside.256.com>

	* Fixed possible lock leak in the shutdown code.  Thanks to TJ
	Saunders.

	* Fixed bug in function pnt checking code.  Not sure when this
	broke.  Thanks to Philippe Roger.

2003-08-04  Gray Watson  <gray@outside.256.com>

	* Removed references to dmalloc leap.

2003-07-23  Gray Watson  <gray@outside.256.com>

	* Changed the installing of libraries to install-data. 

2003-07-08  Gray Watson  <gray@outside.256.com>

	* Releasing version 5.2.1.

2003-06-20  Gray Watson  <gray@outside.256.com>

	* Fixed problems with macro arguments not in () thanks to Paul
	Hurtley.

2003-06-18  Gray Watson  <gray@outside.256.com>

	* Fixed a problem with strdup not returning char *.  Thanks to Dan
	Nelson, Juhani Rautiainen, and Paul Hurtley.

2003-06-10  Gray Watson  <gray@outside.256.com>

	* Releasing version 5.2.0.

	* Renamed the "max memory space wasted" to "max unused memory
	space" to indicate that it is not the users fault.

	* Improved the admin and extern block accounting.

	* Added PDF doc files to the installation.

	* Fixed a problem with the global Makefile and dmalloc_t.  Thanks
	to Bert Deknuydt.

	* Added new logfile expansion of %u as getuid() output.

2003-06-09  Gray Watson  <gray@outside.256.com>

	* Added detection of gethostname() function for %h logpath
	handling.

	* Added new logfile process with %h hostname, %t time, %p
	process-id, and %i for thread-id.

	* Removed the old logfile % processing.  %d, %l, or %u no longer
	expands to the pid.
