@@ -6,6 +6,10 @@
 
 	* Added GETENV_SAFE testing for Cygwin environments.
 
+	* Added a new ERROR_NOT_START_BLOCK (30) errno for addresses which
+	are within an allocation but not pointing to the start of the
+	block.
+
 	* Worked a bit more on the function pnt checking code after some
 	more feedback from Richard Colley.
 
@@ -2045,5 +2049,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.304 2003/09/08 14:52:26 gray Exp $
+$Id: ChangeLog,v 1.305 2003/09/08 15:23:55 gray Exp $
 -------------------------------------------------------------------------------
